--- a/iStudent/Base.lproj/Main.storyboard
+++ b/iStudent/Base.lproj/Main.storyboard
@@ -38,6 +38,7 @@
                                 <state key="normal" title="sign in"/>
                                 <connections>
                                     <action selector="signInBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Zzs-c9-pUB"/>
+                                    <segue destination="9EI-VM-W7i" kind="presentation" id="lhs-HS-629"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JVR-Br-Kyh">
@@ -53,6 +54,9 @@
                                 <state key="normal" title="Don't have a account? Sign up Now">
                                     <color key="titleColor" red="0.0" green="0.35660807290000002" blue="0.71321614580000003" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="3tq-8Y-34s" kind="presentation" id="R1g-Tu-839"/>
+                                </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="fjP-2g-cmb">
                                 <rect key="frame" x="62" y="100" width="250" height="150"/>
@@ -86,6 +90,134 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="133.59999999999999" y="138.98050974512745"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="LHe-he-eMG">
+            <objects>
+                <viewController id="9EI-VM-W7i" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="mwB-vg-P9S"/>
+                        <viewControllerLayoutGuide type="bottom" id="dvo-8Q-epQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bHu-fc-MlF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="launch" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3wE-A1-1Ql">
+                                <rect key="frame" x="121" y="113" width="132" height="52"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uFb-e7-fAf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1232.8" y="532.98350824587715"/>
+        </scene>
+        <!--Sign UpVC-->
+        <scene sceneID="4ZP-vF-zsQ">
+            <objects>
+                <viewController id="3tq-8Y-34s" customClass="SignUpVC" customModule="iStudent" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9SW-TK-nrK"/>
+                        <viewControllerLayoutGuide type="bottom" id="XUs-83-gcN"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="OhV-fN-9rt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Eamil" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5ZT-Id-N0V">
+                                <rect key="frame" x="36" y="223" width="303" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1xs-tb-qhu">
+                                <rect key="frame" x="36" y="281" width="303" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h95-Vt-3Bd">
+                                <rect key="frame" x="36" y="339" width="303" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Student ID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Cq-2k-psZ">
+                                <rect key="frame" x="36" y="397" width="303" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8nf-cq-xMx">
+                                <rect key="frame" x="36" y="455" width="303" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sTb-7c-6de">
+                                <rect key="frame" x="100" y="539" width="175" height="30"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Sign Up"/>
+                                <connections>
+                                    <action selector="SignUpTapped:" destination="3tq-8Y-34s" eventType="touchUpInside" id="ghz-kf-aFH"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kjA-nf-zfw">
+                                <rect key="frame" x="69" y="595" width="237" height="30"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="I already have a account"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="presentation" id="gI7-bN-omZ"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="h95-Vt-3Bd" firstAttribute="top" secondItem="1xs-tb-qhu" secondAttribute="bottom" constant="28" id="0YB-DS-3ko"/>
+                            <constraint firstItem="5ZT-Id-N0V" firstAttribute="top" secondItem="9SW-TK-nrK" secondAttribute="bottom" constant="203" id="1Kg-NN-l3E"/>
+                            <constraint firstItem="sTb-7c-6de" firstAttribute="top" secondItem="8nf-cq-xMx" secondAttribute="bottom" constant="54" id="4ON-6B-IgU"/>
+                            <constraint firstItem="sTb-7c-6de" firstAttribute="leading" secondItem="OhV-fN-9rt" secondAttribute="leadingMargin" constant="84" id="4Xb-Ln-i8c"/>
+                            <constraint firstItem="8nf-cq-xMx" firstAttribute="top" secondItem="8Cq-2k-psZ" secondAttribute="bottom" constant="28" id="4q3-ah-EUA"/>
+                            <constraint firstItem="kjA-nf-zfw" firstAttribute="top" secondItem="sTb-7c-6de" secondAttribute="bottom" constant="26" id="JXL-ZB-U7h"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="8Cq-2k-psZ" secondAttribute="trailing" constant="20" id="KkJ-fu-HeR"/>
+                            <constraint firstItem="8nf-cq-xMx" firstAttribute="leading" secondItem="OhV-fN-9rt" secondAttribute="leadingMargin" constant="20" id="OCy-H0-kYA"/>
+                            <constraint firstItem="8Cq-2k-psZ" firstAttribute="centerX" secondItem="OhV-fN-9rt" secondAttribute="centerX" id="Pc1-FR-oIV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="1xs-tb-qhu" secondAttribute="trailing" constant="20" id="XmW-Fc-29E"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="kjA-nf-zfw" secondAttribute="trailing" constant="53" id="YVF-Ne-A26"/>
+                            <constraint firstItem="h95-Vt-3Bd" firstAttribute="centerX" secondItem="OhV-fN-9rt" secondAttribute="centerX" id="ZYy-Nf-6Qr"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="8nf-cq-xMx" secondAttribute="trailing" constant="20" id="ZiN-4U-bJd"/>
+                            <constraint firstItem="kjA-nf-zfw" firstAttribute="top" secondItem="sTb-7c-6de" secondAttribute="bottom" constant="26" id="agF-9g-49b"/>
+                            <constraint firstItem="h95-Vt-3Bd" firstAttribute="leading" secondItem="OhV-fN-9rt" secondAttribute="leadingMargin" constant="20" id="b7a-T7-saQ"/>
+                            <constraint firstItem="8Cq-2k-psZ" firstAttribute="leading" secondItem="OhV-fN-9rt" secondAttribute="leadingMargin" constant="20" id="eSp-lv-pBO"/>
+                            <constraint firstItem="5ZT-Id-N0V" firstAttribute="centerX" secondItem="OhV-fN-9rt" secondAttribute="centerX" id="fwA-nl-qrP"/>
+                            <constraint firstItem="5ZT-Id-N0V" firstAttribute="leading" secondItem="OhV-fN-9rt" secondAttribute="leadingMargin" constant="20" id="mzA-fS-ym3"/>
+                            <constraint firstItem="kjA-nf-zfw" firstAttribute="leading" secondItem="OhV-fN-9rt" secondAttribute="leadingMargin" constant="53" id="n7x-Mv-C8p"/>
+                            <constraint firstItem="1xs-tb-qhu" firstAttribute="leading" secondItem="OhV-fN-9rt" secondAttribute="leadingMargin" constant="20" id="nuu-nu-U3D"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="h95-Vt-3Bd" secondAttribute="trailing" constant="20" id="o7s-Lz-IIN"/>
+                            <constraint firstItem="8Cq-2k-psZ" firstAttribute="top" secondItem="h95-Vt-3Bd" secondAttribute="bottom" constant="28" id="qHN-Hp-CCx"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="sTb-7c-6de" secondAttribute="trailing" constant="84" id="tdf-Q1-N8b"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="5ZT-Id-N0V" secondAttribute="trailing" constant="20" id="vuh-wN-Qnj"/>
+                            <constraint firstItem="1xs-tb-qhu" firstAttribute="top" secondItem="5ZT-Id-N0V" secondAttribute="bottom" constant="28" id="yak-3R-hTX"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="emailTextField" destination="5ZT-Id-N0V" id="qDN-R1-HrQ"/>
+                        <outlet property="firstNameTextField" destination="1xs-tb-qhu" id="dVI-eq-tGF"/>
+                        <outlet property="lastNameTextField" destination="h95-Vt-3Bd" id="Rwa-CA-y4E"/>
+                        <outlet property="passwordTextField" destination="8nf-cq-xMx" id="avr-YQ-7Ee"/>
+                        <outlet property="studentIdTextField" destination="8Cq-2k-psZ" id="SKK-9H-vb4"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UtR-Uz-dfz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="134" y="975"/>
         </scene>
     </scenes>
     <resources>
